--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,19 @@
-<button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button>
+<label for="">Server name</label>
+<!-- <input 
+    type="text"
+    class="form-control"
+    (input)="onUpdateServerName($event)"
+    > -->
+<input 
+    type="text"
+    class="form-control"
+    [(ngModel)]="serverName"
+    >
+<p>{{ serverName }}</p>
+
+<button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
+<p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
 <app-server></app-server>
+<hr>
+<code [innerText]="allowNewServer"></code>
