--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -7,13 +7,15 @@
 <input 
     type="text"
     class="form-control"
-    [(ngModel)]="serverName"
-    >
-<p>{{ serverName }}</p>
+    [(ngModel)]="serverName">
+<!-- <p>{{ serverName }}</p> -->
 
-<button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
-<p>{{ serverCreationStatus }}</p>
-<app-server></app-server>
-<app-server></app-server>
-<hr>
-<code [innerText]="allowNewServer"></code>
+<button 
+    class="btn btn-primary" 
+    [disabled]="!allowNewServer" 
+    (click)="onCreateServer()">Add Server</button>
+<!-- <p [innerText]="allowNewServer"></p> -->
+<!-- <p>{{ serverCreationStatus }}</p> -->
+<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
+
+<app-server *ngFor="let server of servers"></app-server>
